<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.erroraway</groupId>
	<artifactId>sonar-erroraway-plugin</artifactId>
	<version>1.2.1-SNAPSHOT</version>
	<packaging>sonar-plugin</packaging>

	<name>Error Away SonarQube plugin</name>
	<description>Analyze Java Code with ErrorProne, NullAway, errorprone-slf4j, Picnic Error Prone Support and Autodispose2</description>
	<url>https://github.com/erroraway/sonar-erroraway-plugin</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/erroraway/sonar-erroraway-plugin.git</url>
	</scm>

	<developers>
		<developer>
			<id>gtoison</id>
			<name>Guillaume Toison</name>
		</developer>
	</developers>

	<properties>
		<sonar.server.version>8.9.7.52159</sonar.server.version>
		<sonar-plugin-api.version>8.9.7.52159</sonar-plugin-api.version>
		<sonar-plugin-api.groupId>org.sonarsource.sonarqube</sonar-plugin-api.groupId>
		<sonar-java.version>6.0.0.20538</sonar-java.version>

		<errorprone.version>2.16</errorprone.version>
		<nullaway.version>0.10.2</nullaway.version>
		<errorprone.slf4j.version>0.1.16</errorprone.slf4j.version>
		<autodispose2.version>2.1.1</autodispose2.version>
		<picnic.errorprone.support.version>0.4.0</picnic.errorprone.support.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<sonar.organization>erroraway</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>

		<errorproneArgLine> --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</errorproneArgLine>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>error_prone_core</artifactId>
			<version>${errorprone.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.errorprone</groupId>
					<artifactId>javac</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Error prone plugins -->
		<dependency>
			<groupId>com.uber.nullaway</groupId>
			<artifactId>nullaway</artifactId>
			<version>${nullaway.version}</version>
		</dependency>
		<dependency>
			<groupId>jp.skypencil.errorprone.slf4j</groupId>
			<artifactId>errorprone-slf4j</artifactId>
			<version>${errorprone.slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.uber.autodispose2</groupId>
			<artifactId>autodispose-error-prone</artifactId>
			<version>${autodispose2.version}</version>
		</dependency>
		<dependency>
			<groupId>tech.picnic.error-prone-support</groupId>
			<artifactId>error-prone-contrib</artifactId>
			<version>${picnic.errorprone.support.version}</version>
		</dependency>

		<!-- SonarQube dependencies -->
		<dependency>
			<groupId>${sonar-plugin-api.groupId}</groupId>
			<artifactId>sonar-plugin-api</artifactId>
			<version>${sonar-plugin-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.sonarsource.java</groupId>
			<artifactId>sonar-java-plugin</artifactId>
			<version>${sonar-java.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Maven and maven-resolver-->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>3.8.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver</artifactId>
			<version>1.6.3</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-impl</artifactId>
			<version>1.6.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-connector-basic</artifactId>
			<version>1.6.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-transport-http</artifactId>
			<version>1.6.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-transport-file</artifactId>
			<version>1.6.3</version>
		</dependency>

		<!-- CommonMark-->
		<dependency>
			<groupId>org.commonmark</groupId>
			<artifactId>commonmark</artifactId>
			<version>0.18.2</version>
		</dependency>

		<!-- Unit tests dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>4.5.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.21.0</version>
			<scope>test</scope>
		</dependency>

		<!-- Integration tests dependencies -->
		<dependency>
			<groupId>org.sonarsource.orchestrator</groupId>
			<artifactId>sonar-orchestrator</artifactId>
			<version>3.37.0.87</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.sonarsource.sonarqube</groupId>
			<artifactId>sonar-ws</artifactId>
			<version>9.1.0.47736</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<finalName>${project.artifactId}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
									<addHeader>false</addHeader>
								</transformer>
							</transformers>

							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
				<artifactId>sonar-packaging-maven-plugin</artifactId>
				<version>1.21.0.505</version>
				<extensions>true</extensions>
				<configuration>
					<pluginClass>com.github.erroraway.sonarqube.ErrorAwayPlugin</pluginClass>
					<pluginName>ErrorAway</pluginName>
					<pluginDescription>Analyze Java Code with ErrorProne, NullAway, errorprone-slf4j, Picnic ErrorProne support and Autodispose2</pluginDescription>
					<pluginOrganizationName>ErrorAway</pluginOrganizationName>
					<pluginOrganizationUrl>https://github.com/erroraway</pluginOrganizationUrl>
					<jreMinVersion>11</jreMinVersion>
					<skipDependenciesPackaging>true</skipDependenciesPackaging>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<argLine>${surefireArgLine} ${errorproneArgLine}</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<argLine>${failsafeArgLine}</argLine>
					<disableModules>false</disableModules>
					<useModulePath>false</useModulePath>
					<systemPropertyVariables>
						<sonar.server.version>${sonar.server.version}</sonar.server.version>
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<propertyName>surefireArgLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<formats>
								<format>XML</format>
							</formats>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>deploy</id>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.4</version>
						<executions>
							<execution>
								<id>attach-source</id>
								<phase>compile</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<!-- Prevent gpg from using pinentry programs -->
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.13</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>